--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,7 +8,13 @@
     <title>hello-currency</title>
 </head>
 <body>
-    hello1
+    <section>
+        <div>currency list:</div>
+        <ul th:each="cu:${currencyList}">
+            <li th:text="${cu.getName()}"></li>
+        </ul>
+    </section>
 
 </body>
 </html>
+
