--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,19 +16,19 @@
         </ul>
     </section>
 
-    <form action="@{/calc}" th:object="${CalcForm}" method="post">
-        <input type="number" placeholder="currency 1">
-        <select>
+    <form th:action="@{/calc}" th:object="${calcForm}" method="post">
+        <input type="number" placeholder="currency 1" th:field="*{num1}">
+        <select th:field="*{currency1}">
         <option th:each="cu:${currencyList}" th:value="${cu.getName()}" th:text="${cu.getName()}"> </option>
         </select>
 
-        <input type="number" placeholder="currency 2">
-        <select>
+        <span >res: [[${res}]]</span>
+        <select th:field="*{currency2}">
         <option th:each="cu:${currencyList}" th:value="${cu.getName()}" th:text="${cu.getName()}"> </option>
         </select>
-        <input type="submit" content="submit">
-
+        <input type="submit" value="submit">
     </form>
+    <!--<input type="number" placeholder="currency 2" >-->
 
 </body>
 </html>
